# tiny-xv6-os

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
samantha/: Cargo.toml
src/: vga_buffer.rs
tiny_xv6_os/: Cargo.toml
tiny_xv6_os/src/: main.rs
